# gos

./: .eleventy.cjs  .eleventy.js  .gitignore  .gitmodules  CITATION.cff  LICENSE  MANIFEST.in  Makefile  README.md  build.js  deno.json  example.py  jupyter-gosling.json  package.json  pyproject.toml  rollup.config.js  setup.cfg  setup.py  tsconfig.json  vite.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml  test.yml
doc/: conf.py  index.rst  requirements.txt
doc/_static/: theme_overrides.css
doc/getting_started/: installation.rst
doc/local_data/: index.rst
doc/user_guide/: API.rst  export.rst  local_data.rst  themes.rst
docs/: build.py  index.rst
docs/.doctrees/: environment.pickle  index.doctree
docs/.doctrees/getting_started/: installation.doctree
docs/.doctrees/user_guide/: API.doctree  export.doctree  local_data.doctree  themes.doctree
docs/_static/: theme_overrides.css
docs/getting_started/: installation.rst
docs/user_guide/: API.rst  export.rst  themes.rst
example/: area_chart.py  bar_chart.py  base.njk  circos.py  data.cjs  example.njk  genes.py  ideograms.py  index.njk  line_chart.py  multiscale-lolipop-plot.py  multiscale-lollipop-plot.py  multiscale_sequence.py  overview_detail.py  point_plot.py  routes.json
example/basic_marks/: area_chart.html  bar_chart.html  bar_chart.py  ideograms.html  ideograms.py  line_chart.html  line_chart.py  point_plot.html  text_marks.html  text_marks.py
example/composite_vis/: comparative_matrices.html  comparative_matrices.py
example/multiscale_encoding/: sequence.py
examples/: index.html  index.js  render.py
examples/basic_marks/: area_chart.py  bar_chart.py  ideograms.py  line_chart.py  point_plot.py
frontend/: widget.ts
gosling/: __init__.py  _widget.py  api.py  base.py  data.py  display.py  plugin_registry.py  renderer.py  schemapi.py  widget.py
gosling/data/: __init__.py  _provider.py  _tilesets.py
gosling/data/tests/: test_data_server.py  test_provider.py
gosling/examples/: __init__.py  area_chart.py  bar_chart.py  between_link_pandas.py  brushing_and_linking.py  circos.py  comparative_matrices.py  corces.py  covid.py  genes.py  heatmap.py  ideograms.py  line_chart.py  multiscale_lollipop_plot.py  multiscale_sequence.py  overview_detail.py  point_plot.py  text_marks.py
gosling/experimental/: _background_server.py  _provider.py  _tilesets.py  data.py
gosling/experimental/tests/: test_data_server.py  test_provider.py
gosling/schema/: __init__.py  channels.py  core.py  gosling-schema.json  mixins.py
gosling/sphinxext/: gallery.py  plot.py
gosling/static/: gosling.template.js  index.js  widget.js
gosling/tests/: test_api.py  test_data.py  test_plugin_registry.py
gosling/utils/: __init__.py  core.py  execeval.py
js/: build.js
js/src/: index.ts  widget.ts
notebooks/: example.ipynb  multiple-coordinated-views.ipynb  somatic-structural-variants.ipynb
scripts/: hatch_build.py
src/: hglib@1.11.3.css  index.ts  index.tsx  widget.ts
tools/: README.md  generate_api_docs.py  generate_schema_wrapper.py
