[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gosling"
description = "Python bindings to generate Gosling visualizations"
authors = [{ name = "Trevor Manz", email = "trevor.j.manz@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dynamic = ["version"]
urls = { homepage = "https://github.com/gosling-lang/gos" }
dependencies = ["jsonschema>=3.0", "jinja2", "pandas"]

[project.optional-dependencies]
all = ["servir>=0.2.1", "gosling-widget>=0.0.2", "clodius>=0.20.1"]

[tool.uv]
dev-dependencies = [
  "clodius>=0.20.1",
  "gosling-widget>=0.0.2",
  "pytest>=6.0",
  "requests>=2.0",
  "servir>=0.2.1",
  "setuptools>=75.2.0",
  "sphinx>=8.1.3",
]

[tool.hatch.build]
include = ["/gosling", "/tests"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "gosling/_version.py"
