[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gosling"
description = "Python bindings to generate Gosling visualizations"
authors = [{ name = "Trevor Manz", email = "trevor.j.manz@gmail.com" }]
requires-python = ">=3.9"
license = { text = "MIT" }
readme = "README.md"
dynamic = ["version"]
urls = { homepage = "https://github.com/gosling-lang/gos" }
dependencies = ["jsonschema>=3.0", "jinja2", "pandas", "anywidget>=0.9.13"]

[project.optional-dependencies]
all = ["servir>=0.2.1", "clodius>=0.20.1"]

[dependency-groups]
dev = [
  "clodius>=0.20.1",
  "jupyterlab>=4.3.1",
  "pytest>=6.0",
  "requests>=2.0",
  "servir>=0.2.1",
  "setuptools>=75.2.0",
  "sphinx>=6,<7",
]

[tool.hatch.build]
only-packages = true
include = ["/gosling", "/tests"]
artifacts = ["gosling/static/widget.js", "scripts/hatch_build.py"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "gosling/_version.py"

[tool.hatch.build.hooks.custom]
path = "scripts/hatch_build.py"

[tool.pytest.ini_options]
addopts = [
  "--ignore=gosling/examples",
  "--ignore=tools/altair",
  "--ignore=scripts",
  "--doctest-modules",
]
