[metadata]
name = gosling
version = 0.0.7
author = Trevor Manz
author_email = trevor.j.manz@gmail.com
license = MIT
description = Python bindings to generate Gosling visualizations
url = https://github.com/gosling-lang/gos
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.7
packages = find:
include_package_data = True
install_requires =
  jsonschema>=3.0,<4.0
  jinja2
  numpy
  pandas
  portpicker
  uvicorn
  starlette

[options.extras_require]
dev =
  pytest
  requests
  sphinx
  numpydoc
  furo
